--- a/400_xowa/.classpath
+++ b/400_xowa/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/jtidy_xowa.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/icu4j-4_8.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gplx.gflucene"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
