--- a/gplx.gflucene/.classpath
+++ b/gplx.gflucene/.classpath
@@ -3,9 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/100_core"/>
-	<classpathentry kind="lib" path="C:/000/200_dev/110_java/gplx.gflucene/lib/lucene-core-6.4.2.jar"/>
-	<classpathentry kind="lib" path="C:/000/200_dev/110_java/gplx.gflucene/lib/lucene-memory-6.4.2.jar"/>
-	<classpathentry kind="lib" path="C:/000/200_dev/110_java/gplx.gflucene/lib/lucene-highlighter-6.4.2.jar"/>
-	<classpathentry kind="lib" path="C:/000/200_dev/110_java/gplx.gflucene/lib/lucene-queryparser-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-core-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-memory-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-highlighter-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-queryparser-6.4.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
