Page_sync: Show synced page immediately, not after another refresh

--- a/gplx.gflucene/.classpath
+++ b/gplx.gflucene/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/100_core"/>
 	<classpathentry kind="lib" path="lib/lucene-core-6.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-memory-6.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-highlighter-6.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-queryparser-6.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-analyzers-common-6.4.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
