--- a/gplx.gflucene/.classpath
+++ b/gplx.gflucene/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/100_core"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/lucene-analyzers-common-6.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-core-6.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-highlighter-6.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-memory-6.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-queryparser-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/6.4.2/lucene-analyzers-common-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/6.4.2/lucene-core-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/6.4.2/lucene-highlighter-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/6.4.2/lucene-memory-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/6.4.2/lucene-queryparser-6.4.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
