--- a/gplx.gflucene/.classpath
+++ b/gplx.gflucene/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/100_core"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/6.4.2/lucene-analyzers-common-6.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/6.4.2/lucene-core-6.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/6.4.2/lucene-highlighter-6.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/6.4.2/lucene-memory-6.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/6.4.2/lucene-queryparser-6.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/6.4.2/lucene-queries-6.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/5.3.0.drd/lucene-analyzers-common-5.3.0-mobile-2.jar"/>
+	<classpathentry kind="lib" path="lib/5.3.0.drd/lucene-core-5.3.0-mobile-2.jar"/>
+	<classpathentry kind="lib" path="lib/5.3.0.drd/lucene-highlighter-5.3.0-mobile-2.jar"/>
+	<classpathentry kind="lib" path="lib/5.3.0.drd/lucene-memory-5.3.0-mobile-2.jar"/>
+	<classpathentry kind="lib" path="lib/5.3.0.drd/lucene-queries-5.3.0-mobile-2.jar"/>
+	<classpathentry kind="lib" path="lib/5.3.0.drd/lucene-queryparser-5.3.0-mobile-2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
