--- a/100_core/.classpath
+++ b/100_core/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/commons-compress-1.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/xz-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/Saxon-HE-9.9.1-2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
