Update build files for new baselib [#413]

--- a/400_xowa/.classpath
+++ b/400_xowa/.classpath
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="lib/luaj_xowa.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/baselib"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/100_core"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/140_dbs"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/150_gfui"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/jtidy_xowa.jar"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gplx.gflucene"/>
+	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/luaj_xowa.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jtidy_xowa.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/icu4j-57_1.jar"/>
 	<classpathentry kind="lib" path="lib/vnu.jar"/>
 	<classpathentry kind="lib" path="lib/Saxon-HE-9.9.1-2.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/baselib"/>
-	<classpathentry kind="output" path="bin"/>
 </classpath>
